--- a/src/_posts/test-world.mdx
+++ b/src/_posts/test-world.mdx
@@ -4,8 +4,7 @@ description: "Lorem ipsum dolor sit amet consectetur adipisicing elit. Harum, ex
 date: "2022-01-15"
 ---
 
-<Note emoji="👋">Hey there, I am a custom React component being rendered in [MDX](https://mdxjs.com/).</Note>
-
+Hey there, I am a custom React component being rendered in [MDX](https://mdxjs.com/).
 Lorem ipsum dolor sit amet [consectetur adipisicing](/) elit. Porro nobis consectetur debitis? In animi nobis soluta at esse et nihil, non aut dolorem, deserunt odio quasi sunt veritatis, nisi quam?
 
 > Lorem ipsum dolor sit amet consectetur adipisicing elit. Porro nobis consectetur debitis? In animi nobis soluta at esse et nihil.
